JS files rename

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <title>Genetic Algorithms: Classic version implementation example [001]</title>
     <link href="styles.css" rel="stylesheet"/>
-    <script type="application/javascript" src="vis-graph3d.min.js"></script>
-    <script type="application/javascript" src="math.js"></script>
-    <script type="application/javascript" src="genetic-algorithms.helpers.js"></script>
-    <script type="application/javascript" src="algorithm.js"></script>
+    <script type="application/javascript" src="https://raw.githubusercontent.com/passions-blog/Genetic-Algorithms-Classic-Example-001/7d746e334f8e6bf76d44fd56ff17dfb6e476d6cf/math.js"></script>
+    <script type="application/javascript" src="ga.helpers.js"></script>
+    <script type="application/javascript" src="ga-classic.js"></script>
 </head>
 <body>
 <script>
