--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     if (self !== top) {
         var rootHeight;
         setInterval(function () {
-                var rootElement = document.getElementsByTagName('body');
+                var rootElement = document.getElementById('algorithmControls');
                 if (rootElement) {
                     var currentRootHeight = rootElement.offsetHeight;
                     //Only send values if height has changed since last time
@@ -61,73 +61,74 @@
     }
 </script>
 
-<div class="algorithm-box options">
-    <label for="eval_fn">Objective function</label>
-    <input class="full-width" type="text" value="x * sin(y) + y * sin(x)" id="eval_fn">
+<div id="algorithmControls">
+    <div class="algorithm-box options">
+        <label for="eval_fn">Objective function</label>
+        <input class="full-width" type="text" value="x * sin(y) + y * sin(x)" id="eval_fn">
 
-    <div class="column-small">
-        <label for="xmin">x<sub>min</sub></label>
-        <input type="number" value="0" id="xmin">
-    </div>
-    <div class="column-small">
-        <label for="xmax">x<sub>max</sub></label>
-        <input type="number" value="8" id="xmax">
-    </div>
-    <div class="column-small">
-        <label for="ymin">y<sub>min</sub></label>
-        <input type="number" value="0" id="ymin">
-    </div>
-    <div class="column-small">
-        <label for="ymax">y<sub>max</sub></label>
-        <input type="number" value="8" id="ymax">
-    </div>
-    <br class="clear">
+        <div class="column-small">
+            <label for="xmin">x<sub>min</sub></label>
+            <input type="number" value="0" id="xmin">
+        </div>
+        <div class="column-small">
+            <label for="xmax">x<sub>max</sub></label>
+            <input type="number" value="8" id="xmax">
+        </div>
+        <div class="column-small">
+            <label for="ymin">y<sub>min</sub></label>
+            <input type="number" value="0" id="ymin">
+        </div>
+        <div class="column-small">
+            <label for="ymax">y<sub>max</sub></label>
+            <input type="number" value="8" id="ymax">
+        </div>
+        <br class="clear">
 
-    <div class="column">
-        <label for="pop_size">Population size</label>
-        <input type="number" min="5" max="1000" value="25" id="pop_size">
-    </div>
-    <div class="column">
-        <label for="generations_count">Generations</label>
-        <input type="number" min="1" max="10000" value="50" id="generations_count">
-        <small>Number of iterations.</small>
-    </div>
-    <br class="clear">
+        <div class="column">
+            <label for="pop_size">Population size</label>
+            <input type="number" min="5" max="1000" value="25" id="pop_size">
+        </div>
+        <div class="column">
+            <label for="generations_count">Generations</label>
+            <input type="number" min="1" max="10000" value="50" id="generations_count">
+            <small>Number of iterations.</small>
+        </div>
+        <br class="clear">
 
-    <div class="column">
-        <label for="var_size">Binary variable size</label>
-        <input type="number" min="2" max="32" value="13" id="var_size">
-        <small>Number of bits encoding single variable.</small>
-    </div>
-    <div class="column">
-        <label for="selection_count">Selection count</label>
-        <input type="number" min="1" max="999" value="15" id="selection_count">
-        <small>Number of the best solutions that are selected during selection (population is trimmed to this number
-            after selection). Value should be lower than population size.</small>
-    </div>
-    <br class="clear">
+        <div class="column">
+            <label for="var_size">Binary variable size</label>
+            <input type="number" min="2" max="32" value="13" id="var_size">
+            <small>Number of bits encoding single variable.</small>
+        </div>
+        <div class="column">
+            <label for="selection_count">Selection count</label>
+            <input type="number" min="1" max="999" value="15" id="selection_count">
+            <small>Number of the best solutions that are selected during selection (population is trimmed to this number
+                after selection). Value should be lower than population size.</small>
+        </div>
+        <br class="clear">
 
-    <div class="column">
-        <label for="pc">Crossover probability</label>
-        <input type="number" min="0" max="1" value="0.5" id="pc">
-    </div>
-    <div class="column">
-        <label for="pm">Mutation probability</label>
-        <input type="number" min="0" max="1" value="0.25" id="pm">
-    </div>
-    <br class="clear">
+        <div class="column">
+            <label for="pc">Crossover probability</label>
+            <input type="number" min="0" max="1" value="0.5" id="pc">
+        </div>
+        <div class="column">
+            <label for="pm">Mutation probability</label>
+            <input type="number" min="0" max="1" value="0.25" id="pm">
+        </div>
+        <br class="clear">
 
-    <div class="column">
-        <label for="maximize">Maximize function</label>
-        <input type="checkbox" id="maximize" checked="checked">
+        <div class="column">
+            <label for="maximize">Maximize function</label>
+            <input type="checkbox" id="maximize" checked="checked">
+        </div>
+        <div class="column">
+            <input type="button" id="execute" value="Execute >>" onclick="execute()">
+        </div>
+        <br class="clear">
     </div>
-    <div class="column">
-        <input type="button" id="execute" value="Execute >>" onclick="execute()">
-    </div>
-    <br class="clear">
+
+    <div class="algorithm-box results" id="results"></div>
 </div>
-
-<div class="algorithm-box results" id="results"></div>
-
 </body>
 </html>
