Remove letter breaking layout

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 <div id="widget">
     <div class="algorithm-box options">
-        <div class="column34">s
+        <div class="column34">
             <label for="eval_fn">Objective function</label>
             <input class="full-width" type="text" value="x * sin(y) + y * sin(x)" id="eval_fn">
         </div>
