Better button visibility

--- a/index.html
+++ b/index.html
@@ -273,9 +273,8 @@
             <label for="maximize">Maximize function</label>
             <input type="checkbox" id="maximize" checked="checked">
         </div>
-        <div class="column">
-            <input type="button" id="execute" value="Execute >>" onclick="execute()">
-        </div>
+        <br class="clear">
+        <input type="button" id="execute" value="Execute >>" onclick="execute()">
         <br class="clear">
     </div>
 
